feat: update service to call to translation service and new mapper method