@@ -2,15 +2,20 @@ package org.example.backend.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.example.backend.common.LanguageInterceptor;
 import org.example.backend.domain.Program;
+import org.example.backend.domain.Student;
 import org.example.backend.dto.request.ProgramRequest;
 import org.example.backend.dto.response.ProgramResponse;
 import org.example.backend.mapper.ProgramMapper;
 import org.example.backend.repository.IProgramRepository;
 import org.example.backend.service.IProgramService;
+import org.example.backend.service.ITranslationService;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Service
@@ -18,6 +23,7 @@ import java.util.stream.Collectors;
 @Slf4j
 public class ProgramServiceImpl implements IProgramService {
     private final IProgramRepository programRepository;
+    private final ITranslationService translationService;
 
     @Override
     public ProgramResponse addProgram(ProgramRequest request) {
@@ -37,12 +43,46 @@ public class ProgramServiceImpl implements IProgramService {
     @Override
     public List<ProgramResponse> getAllPrograms() {
         List<Program> programs = programRepository.findAll();
-
         log.info("Retrieved all programs from database");
 
-        return programs.stream()
-                .map(ProgramMapper::mapToResponse)
-                .collect(Collectors.toList());
+        String currentLanguage = LanguageInterceptor.CURRENT_LANGUAGE.get();
+        if ("vi".equals(currentLanguage)) {
+            return programs.stream()
+                    .map(ProgramMapper::mapToResponse)
+                    .collect(Collectors.toList());
+        } else {
+            // Get translations for programs
+            List<Integer> programIds = programs.stream()
+                    .map(Program::getId)
+                    .toList();
+            Map<Integer, Map<String, String>> programTranslations = translationService
+                    .getTranslations("Program", programIds, currentLanguage);
+
+            // If programs have students, get translations for students and related entities
+            List<Integer> studentIds = programs.stream()
+                    .filter(program -> program.getStudents() != null && !program.getStudents().isEmpty())
+                    .flatMap(program -> program.getStudents().stream())
+                    .map(Student::getStudentId)
+                    .map(studentId -> Integer.parseInt(studentId.replaceAll("[^\\d]", "")))
+                    .distinct()
+                    .toList();
+
+            Map<Integer, Map<String, String>> studentTranslations = Collections.emptyMap();
+            if (!studentIds.isEmpty()) {
+                studentTranslations = translationService
+                        .getTranslations("Student", studentIds, currentLanguage);
+            }
+
+            final Map<Integer, Map<String, String>> finalStudentTranslations = studentTranslations;
+
+            return programs.stream()
+                    .map(program -> ProgramMapper.mapToResponseWithTranslation(
+                            program,
+                            programTranslations.getOrDefault(program.getId(), Collections.emptyMap()),
+                            finalStudentTranslations
+                    ))
+                    .collect(Collectors.toList());
+        }
     }
 
     @Override
@@ -55,7 +95,31 @@ public class ProgramServiceImpl implements IProgramService {
 
         log.info("Retrieved program from database");
 
-        return ProgramMapper.mapToResponse(program);
+        String currentLanguage = LanguageInterceptor.CURRENT_LANGUAGE.get();
+        if ("vi".equals(currentLanguage)) {
+            return ProgramMapper.mapToResponse(program);
+        } else {
+            // Get translation for program
+            Map<String, String> programTranslations = translationService.getTranslation(
+                    "Program", program.getId(), currentLanguage);
+
+            // Get translations for students if present
+            Map<Integer, Map<String, String>> studentTranslations = Collections.emptyMap();
+            if (program.getStudents() != null && !program.getStudents().isEmpty()) {
+                List<Integer> studentIds = program.getStudents().stream()
+                        .map(Student::getStudentId)
+                        .map(studentId -> Integer.parseInt(studentId.replaceAll("[^\\d]", "")))
+                        .toList();
+                studentTranslations = translationService
+                        .getTranslations("Student", studentIds, currentLanguage);
+            }
+
+            return ProgramMapper.mapToResponseWithTranslation(
+                    program,
+                    programTranslations,
+                    studentTranslations
+            );
+        }
     }
 
     @Override
